[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
clap = "2.33.3"
log = "0.4.14"
solved_ac = { path = "../solved_ac" }

async-std = { version = "1.9.0", features = ["attributes"] }
codespan-reporting = "0.11.1"
